# iceee-data

./: .gitignore  README.md  meson.build  meson_options.txt
Meson/: glob_static.py  glob_variable.py
Static/AIScript/: 4_druid_melee_30.nut  4_druid_range_30.nut  4_knight_30.nut  4_mage_30.nut  4_rogue_30.nut  Bastion_NPC_GuardMeleeAnimation1.nut  Bastion_NPC_GuardMeleeAnimation2.nut  Bastion_NPC_GuardMeleeAnimation3.nut  Corsica_NPC_AnubianCatapult1.nut  Corsica_NPC_AnubianCatapult2.nut  Earthrise_flavor_catapultfiring1.nut  FailsafeAI.nut  Newb_Knight.nut  custom_henge_glow.nut  custom_wailing.nut  death_creature_brave_6.nut  druid_bow_brave_1.nut  druid_bow_brave_6.nut  druid_death_brave_6.nut  druid_mystic_brave_6.nut  example.nut  fire_creature_brave_6.nut  flytrap_brave.nut  frost_creature_brave_6.nut  knight_brave_1.nut  knight_brave_6.nut  mage_fire_brave_1.nut  mage_fire_brave_6.nut  mage_frost_brave_6.nut  melee_creature_brave_1.nut  melee_creature_brave_6.nut  mystic_creature_brave_6.nut  rogue_brave_1.nut  rogue_brave_6.nut  shroomie_brave.nut  thunderwalker_brave.nut
Static/AssetCatalogue/: ATS.txt  Buildings.html  Buildings.txt  Caves.html  Caves.txt  Dungeons.html  Dungeons.txt  Props.html  Props.txt  Skins.html  _Root.txt
Static/Data/: AbilityTable.txt  CreatureDef.txt  CreatureDef_ICEEE.txt  CreatureDef_Mounts.txt  Game.txt  HTTPChecksum.txt  ItemDef_ICEEE.txt  ItemDef_Props.txt  Weather.txt  ZoneDef.txt  ZoneDef.txt.2
Static/GroveTemplates/TranquilSpring/: x001_y002.txt  x002y002.txt
User/Grove/5000/: .gitignore
Variable/: .gitignore
Variable/Creatures/: 00001037.txt  00001042.txt  00001396.txt  00001408.txt
Variable/CreditShop/: 110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt
Variable/Instance/1/: ZoneDef.txt
Variable/Instance/10/: ZoneDef.txt
Variable/Instance/100/: ZoneDef.txt
Variable/Instance/1009/: ZoneDef.txt
Variable/Instance/101/: ZoneDef.txt
Variable/Instance/103/: ZoneDef.txt
Variable/Instance/105/: ZoneDef.txt
Variable/Instance/1058/: ZoneDef.txt
Variable/Instance/1059/: ZoneDef.txt
Variable/Instance/1060/: ZoneDef.txt
Variable/Instance/1070/: ZoneDef.txt
Variable/Instance/1071/: ZoneDef.txt
Variable/Instance/1072/: ZoneDef.txt
Variable/Instance/1081/: ZoneDef.txt
Variable/Instance/1089/: ZoneDef.txt
Variable/Instance/11/: ZoneDef.txt
Variable/Instance/110/: ZoneDef.txt
Variable/Instance/111/: ZoneDef.txt
Variable/Instance/112/: ZoneDef.txt
Variable/Instance/1158/: ZoneDef.txt
Variable/Instance/1200/: ZoneDef.txt
Variable/Instance/1201/: ZoneDef.txt
Variable/Instance/1202/: ZoneDef.txt
Variable/Instance/17/: ZoneDef.txt
Variable/Instance/19/: ZoneDef.txt
Variable/Instance/2/: ZoneDef.txt
Variable/Instance/200/: ZoneDef.txt
Variable/Instance/2000/: ZoneDef.txt
Variable/Instance/2009/: ZoneDef.txt
Variable/Instance/201/: ZoneDef.txt
Variable/Instance/2081/: ZoneDef.txt
(+98 files in other folders)
